# numeric-ode

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README  README.md  integrators.cabal  numeric-ode.cabal  stack.yaml
src/: Tmp.hs
src/Examples/: KeplerProblem.hs  KeplerSimple1.hs  LottkaVolterra.hs  LottkaVolterra.lhs
src/Math/: Integrators.hs
src/Math/Integrators/: ExplicitEuler.hs  Implicit.hs  ImplicitEuler.hs  ImplicitMidpointRule.hs  Internal.hs  RK.hs  StormerVerlet.hs  StormerVerletAlt.hs  SympleticEuler.hs
src/Math/Integrators/RK/: Internal.hs  Parser.hs  Template.hs  Types.hs
